--- a/src/ui/assets/styles/components/global.pcss
+++ b/src/ui/assets/styles/components/global.pcss
@@ -4,6 +4,10 @@ body {
   font-size: 15px;
 }
 
+#modal {
+  height: 90%;
+}
+
 #app > main {
   @apply border-t-4 border-balance-dp;
   z-index: 0;
